# libtorch-vgg19

./: .gitignore  CMakeLists.txt  main.cpp
include/: preprocess.h  vgg.h
src/: preprocess.cpp  vgg.cpp
